# gomoku_player

./: Cargo.toml  README.md
gomoku-core/: Cargo.toml
gomoku-core/src/: ai.rs  board.rs  game.rs  lib.rs  location.rs  runtime.rs  test.rs
gomoku-runner/: Cargo.toml
gomoku-runner/src/: gomoku.rs
gomoku-ui/: Cargo.toml
gomoku-ui/src/: gomoku.rs  lib.rs  message.rs
gomoku-ui/src/entity/: board.rs  mod.rs
gomoku-ui/src/stylesheet/: mod.rs  square.rs
src/: ai.rs  board.rs  game.rs  lib.rs  location.rs  main.rs  test.rs
